[package]
name = "mquad-rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.13", features = ["audio"] }
macroquad-tiled = "0.2.1"

[patch.crates-io]
macroquad-tiled = { git = "https://github.com/InnocentusLime/macroquad.git", branch="raw-tiled-patch" }
macroquad = { git = "https://github.com/InnocentusLime/macroquad.git", branch="raw-tiled-patch" }