[package]
name = "mquad-rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.13", features = ["audio"] }
macroquad-tiled = "0.2.1"

[patch.crates-io]
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad.git", branch="master" }
macroquad = { git = "https://github.com/not-fl3/macroquad.git", branch="master" }